@@ -988,6 +988,11 @@ argument_list|(
 name|userQuery
 argument_list|)
 decl_stmt|;
+name|Query
+name|parsedUserQuery
+init|=
+name|dis
+decl_stmt|;
 if|if
 condition|(
 name|dis
@@ -1023,32 +1028,22 @@ argument_list|,
 name|minShouldMatch
 argument_list|)
 expr_stmt|;
-name|query
-operator|.
-name|add
-argument_list|(
+name|parsedUserQuery
+operator|=
 name|t
-argument_list|,
-name|Occur
-operator|.
-name|MUST
-argument_list|)
 expr_stmt|;
 block|}
-else|else
-block|{
 name|query
 operator|.
 name|add
 argument_list|(
-name|dis
+name|parsedUserQuery
 argument_list|,
 name|Occur
 operator|.
 name|MUST
 argument_list|)
 expr_stmt|;
-block|}
 comment|/* * * Add on Phrases for the Query * * */
 comment|/* build up phrase boosting queries */
 comment|/* if the userQuery already has some quotes, stip them out.        * we've already done the phrases they asked for in the main        * part of the query, this is to boost docs that may not have        * matched those phrases but do match looser phrases.        */
@@ -1604,22 +1599,6 @@ name|req
 argument_list|)
 condition|)
 block|{
-name|BooleanQuery
-name|highlightQuery
-init|=
-operator|new
-name|BooleanQuery
-argument_list|()
-decl_stmt|;
-name|U
-operator|.
-name|flattenBooleanQuery
-argument_list|(
-name|highlightQuery
-argument_list|,
-name|query
-argument_list|)
-expr_stmt|;
 name|String
 index|[]
 name|highFields
@@ -1649,7 +1628,7 @@ name|results
 operator|.
 name|docList
 argument_list|,
-name|highlightQuery
+name|parsedUserQuery
 argument_list|,
 name|req
 argument_list|,
